@@ -551,4 +551,8 @@ MK: 0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789AB
         End
 ------------------------------------------------------------------
 
+/^[\x{1234}\x{4321}]{2,4}?/
+    \x{1234}\x{1234}\x{1234}
+ 0: \x{1234}\x{1234}
+
 /-- End of testinput17 --/
